# parlati

./: .devcontainer.json  .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  bot.py  crawler.py  ingest.py  pyproject.toml  query.py  requirements.txt
db/: chroma-collections.parquet  chroma-embeddings.parquet
documents/: 2019-2022-ds-decs-repubblica-e-cantone-ticino.md  2022-2023-decs-decs-repubblica-e-cantone-ticino.md  2022-can-can-repubblica-e-cantone-ticino.md  2022-consuntivo-finanze-dfe-repubblica-e-cantone-ticino.md  5-buoni-motivi-per-formare-dfp-decs-repubblica-e-cantone-ticino.md  a-chi-ci-rivolgiamo-uvc-dss-repubblica-e-cantone-ticino.md  abbandonate-riforma-comuni-di-repubblica-e-cantone-ticino.md  abbonamento-sgcds-can-repubblica-e-cantone-ticino.md  abolizione-delle-attestazioni-vincolanti-dc-dfe-repubblica-e-cantone-ticino.md  accesso-sps-decs-repubblica-e-cantone-ticino.md  acque-sotterranee-acqua-protezione-e-approvvigionamento-dt-repubblica-e-cantone-ticino.md  acque-superficiali-acqua-protezione-e-approvvigionamento-dt-repubblica-e-cantone-ticino.md  adesivo-azienda-formatrice-dfp-decs-repubblica-e-cantone-ticino.md  adozioni-uvc-dss-repubblica-e-cantone-ticino.md  affettivita-e-sessualita-infogiovani-tich-repubblica-e-cantone-ticino.md  affidamento-famigliare-dasf-dss-repubblica-e-cantone-ticino.md  agenda-culturale-uapcd-decs-repubblica-e-cantone-ticino.md  agenda-repubblica-e-cantone-ticino.md  agenzie-di-sicurezza-uvc-dss-repubblica-e-cantone-ticino.md  agevolazioni-per-gli-apprendisti-dfp-decs-repubblica-e-cantone-ticino.md  (+802 more)
(+3 files in other folders)
